# data_recruitment

./: README.md  pyproject.toml  requirements.txt
src_data/: customers.csv
tes_recruitment/: edit_this.sql  main.py
tes_recruitment/data/: orders.csv
