[tool.poetry]
name = "tes-recruitment"
version = "0.1.0"
description = ""
authors = ["TES Engineering <engineering@tes.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas= "2.1.4"
SQLAlchemy= "1.4.36"
pandasql = "^0.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
